--- a/index.html
+++ b/index.html
@@ -237,73 +237,73 @@
             <p class="mb-5 pb-4">Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
                 inovações <br> que implementei e descubra como elas podem agregar valor às suas necessidades.</p>
 
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-eterno.png" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>L2 Eterno</h5>
-                                <a href="https://www.l2eterno.com/" target="_blank"><i class="ti-zoom-in"></i></a>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/cart-img.png" alt="">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Shopping Cart</h5>
+                                    <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
+                                            class="ti-zoom-in"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Landing Page</h5>
+                                    <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i
+                                            class="ti-zoom-in"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Landing Page</h5>
-                                <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
+                    <div class="col-sm-4">
+                        <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/teste-2.png" alt="Foto de Animes Juntos">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Animes Personagens</h5>
+                                    <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
+                                            class="ti-zoom-in"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/cardapio.png" alt="Cardapio Online">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Cardápio Online</h5>
+                                    <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                            class="ti-zoom-in"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/landing.png" alt="Foto Projeto">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Landing Page</h5>
+                                    <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i
+                                            class="ti-zoom-in"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/teste.png" alt="">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Cadastro Usuário</h5>
+                                    <a href="https://teste-trabalho.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/cart-img.png" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Shopping Cart</h5>
-                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/teste-2.png" alt="Foto de Animes Juntos">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Animes Personagens</h5>
-                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/cardapio.png" alt="Cardapio Online">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Cardápio Online</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/landing.png" alt="Foto Projeto">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Landing Page</h5>
-                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- End of portfolio section -->
