Mudei os projetos de lugar

--- a/index.html
+++ b/index.html
@@ -262,21 +262,21 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/teste-2.png" alt="Foto de Animes Juntos">
+                            <img src="assets/imgs/cardapio.png" alt="Foto de Animes Juntos">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Animes Personagens</h5>
-                                    <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
+                                    <h5>Cardápio Online</h5>
+                                    <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
                                             class="ti-zoom-in"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/cardapio.png" alt="Cardapio Online">
+                            <img src="assets/imgs/teste-2.png" alt="Cardapio Online">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Cardápio Online</h5>
-                                    <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                    <h5>Animes</h5>
+                                    <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
                                             class="ti-zoom-in"></i></a>
                                 </div>
                             </div>
@@ -293,15 +293,17 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Projeto em andamento
                         <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/teste.png" alt="">
+                            <img src="#" alt="">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Cadastro Usuário</h5>
-                                    <a href="https://teste-trabalho.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                    <h5></h5>
+                                    <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
                                 </div>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
         </div>
