--- a/index.html
+++ b/index.html
@@ -103,19 +103,34 @@
                     <div class="pl-md-4 col-md-9 scroll-effect">
                         <h6 class="title">Sobre <span class="about-me">mim</span></h6>
                         <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
-                        <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
-                            JavaScript, Git,
-                            Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de
-                            aprimorar
-                            minhas habilidades para entregar soluções de alta qualidade.</p>
-                        <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas
-                            habilidades de
-                            desenvolvimento
-                            para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem
-                            escrito
-                            para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
-                            Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
-                            aprender com meus colegas para contribuir para o crescimento coletivo.</p>
+                        <p class="pl-titles">
+                            Desenvolvedor de Software com 2 anos de experiência em desenvolvimento, especializado na criação
+                            de soluções web modernas, escaláveis e orientadas à performance. Possuo sólida atuação com
+                            JavaScript e React.js, além de PHP, sempre aplicando boas práticas de Clean Code, princípios
+                            SOLID e padrões de projeto para garantir código de alta qualidade e fácil manutenção.
+                        </p>
+                        <p class="pl-titles">
+                            Back-end: Desenvolvimento de APIs RESTful e sistemas robustos em PHP, integração eficiente com
+                            bancos de dados relacionais (MySQL) e aplicação de práticas avançadas de segurança e otimização
+                            de performance.
+                        </p>
+
+                        <p class="pl-titles">
+                            Front-end: Construção de interfaces responsivas e interativas com React, priorizando usabilidade
+                            (UX), acessibilidade e design limpo para proporcionar a melhor experiência ao usuário.
+                        </p>
+
+                        <p class="pl-titles">
+                            Versionamento e Deploy: Gerenciamento de código-fonte com Git e GitHub, participação em
+                            pipelines de integração e entrega contínua (CI/CD) e deploy de aplicações em ambientes de
+                            produção.
+                        </p>
+
+                        <p class="pl-titles">
+                            Sou um profissional comprometido, com excelente comunicação, perfil colaborativo e foco em
+                            evolução contínua. Busco sempre agregar valor aos projetos em que atuo, contribuindo para
+                            resultados sólidos e inovadores.
+                        </p>
                         <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
                     </div>
                 </div>
@@ -127,7 +142,8 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle sub-secundario">Certificados</h6>
-            <p id="mb-12" class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência profissional. Estou
+            <p id="mb-12" class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência
+                profissional. Estou
                 sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível. Abaixo,
                 compartilho alguns dos meus certificados mais recentes.</p>
 
@@ -237,63 +253,63 @@
             <p class="mb-5 pb-4">Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
                 inovações <br> que implementei e descubra como elas podem agregar valor às suas necessidades.</p>
 
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/cart-img.png" alt="">
-                            <div class="overlay">
-                                <div class="overlay-infos">
-                                    <h5>Shopping Cart</h5>
-                                    <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
-                                            class="ti-zoom-in"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
-                            <div class="overlay">
-                                <div class="overlay-infos">
-                                    <h5>Landing Page</h5>
-                                    <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i
-                                            class="ti-zoom-in"></i></a>
-                                </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="img-wrapper scroll-effect">
+                        <img src="assets/imgs/cart-img.png" alt="">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Shopping Cart</h5>
+                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/cardapio.png" alt="Foto de Animes Juntos">
-                            <div class="overlay">
-                                <div class="overlay-infos">
-                                    <h5>Cardápio Online</h5>
-                                    <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
-                                            class="ti-zoom-in"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/teste-2.png" alt="Cardapio Online">
-                            <div class="overlay">
-                                <div class="overlay-infos">
-                                    <h5>Animes</h5>
-                                    <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
-                                            class="ti-zoom-in"></i></a>
-                                </div>
+                    <div class="img-wrapper scroll-effect">
+                        <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Landing Page</h5>
+                                <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/landing.png" alt="Foto Projeto">
-                            <div class="overlay">
-                                <div class="overlay-infos">
-                                    <h5>Landing Page</h5>
-                                    <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i
-                                            class="ti-zoom-in"></i></a>
-                                </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="img-wrapper scroll-effect">
+                        <img src="assets/imgs/cardapio.png" alt="Foto de Animes Juntos">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Cardápio Online</h5>
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
-                        <!-- Projeto em andamento
+                    </div>
+                    <div class="img-wrapper scroll-effect">
+                        <img src="assets/imgs/teste-2.png" alt="Cardapio Online">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Animes</h5>
+                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="img-wrapper scroll-effect">
+                        <img src="assets/imgs/landing.png" alt="Foto Projeto">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Landing Page</h5>
+                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Projeto em andamento
                         <div class="img-wrapper scroll-effect">
                             <img src="#" alt="">
                             <div class="overlay">
@@ -304,8 +320,8 @@
                             </div>
                         </div>
                         -->
-                    </div>
                 </div>
+            </div>
         </div>
     </section>
     <!-- End of portfolio section -->
@@ -315,7 +331,8 @@
     <section id="contact" class="position-relative section">
         <div class="container text-center">
             <h6 class="subtitle sub-title">Contato</h6>
-            <p id="mb-12" class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um
+            <p id="mb-12" class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou
+                envie um
                 e-mail, estou à disposição!</p>
 
             <div class="contact text-left">
