--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site de Portfolio de Brenno Alencar.">
+    <meta name="description" content="Desenvolvedor de Software especializado em JavaScript, React.js e PHP. Explore meu portfólio e certificações.">
     <meta name="author" content="Brenno Alencar">
+    <meta name="keywords" content="Desenvolvedor Web, JavaScript, React, PHP, Portfolio, Brenno Alencar">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Brenno Alencar | Desenvolvedor de Software">
+    <meta property="og:description" content="Desenvolvedor de Software especializado em JavaScript, React.js e PHP. Explore meu portfólio e certificações.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://seudominio.com">
+    <meta property="og:image" content="assets/imgs/minha-img.jpeg">
     <link rel="shortcut icon" href="assets/imgs/icon.png" type="image/x-icon">
-    <title>Brenno Alencar | Portfólio</title>
-    <!-- font icons -->
+    <title>Brenno Alencar | Desenvolvedor de Software</title>
+    
+    <!-- Preload critical resources -->
+    <link rel="preload" href="assets/css/steller.css" as="style">
+    <link rel="preload" href="assets/imgs/Imagem_-img-removebg-preview.png" as="image">
+    
+    <!-- Font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <link rel="stylesheet" href="assets/css/steller.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" crossorigin="anonymous">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -48,7 +59,7 @@
                         <a class="nav-link" href="#contact">Contato</a>
                     </li>
                     <li class="nav-item">
-                        <a class="- btn btn-primary rounded ml-4"
+                        <a class="btn btn-primary rounded ml-4"
                             href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20tudo%20bem%3F"
                             target="_blank">Fale Comigo</a>
                     </li>
@@ -86,7 +97,7 @@
                 </div>
             </div>
             <div class="img-holder">
-                <img src="assets/imgs/Imagem_-img-removebg-preview.png" alt="">
+                <img src="assets/imgs/Imagem_-img-removebg-preview.png" alt="Foto de Brenno Alencar">
             </div>
         </div>
     </header>
@@ -98,11 +109,11 @@
             <div class="row text-center text-md-left">
                 <div class="row">
                     <div class="col-md-3 scroll-effect">
-                        <img src="assets/imgs/minha-img.jpeg" alt="" class="img-thumbnail mb-4">
+                        <img src="assets/imgs/minha-img.jpeg" alt="Foto de Brenno Alencar" class="img-thumbnail mb-4">
                     </div>
                     <div class="pl-md-4 col-md-9 scroll-effect">
                         <h6 class="title">Sobre <span class="about-me">mim</span></h6>
-                        <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
+                        <p class="subtitle sub-title-zero">Software Developer</p>
                         <p class="pl-titles">
                             Desenvolvedor de Software com 2 anos de experiência em desenvolvimento, especializado na criação
                             de soluções web modernas, escaláveis e orientadas à performance. Possuo sólida atuação com
@@ -256,21 +267,21 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/cart-img.png" alt="">
+                        <img src="assets/imgs/cart-img.png" alt="Projeto Shopping Cart">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Shopping Cart</h5>
-                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
+                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank" aria-label="Ver projeto Shopping Cart"><i
                                         class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
+                        <img src="assets/imgs/rayal-park-img.png" alt="Projeto Landing Page Rayal Park">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Landing Page</h5>
-                                <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i
+                                <a href="https://rayal-park-main-main.vercel.app/" target="_blank" aria-label="Ver projeto Landing Page"><i
                                         class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -278,21 +289,21 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/cardapio.png" alt="Foto de Animes Juntos">
+                        <img src="assets/imgs/cardapio.png" alt="Projeto Cardápio Online">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Cardápio Online</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank" aria-label="Ver projeto Cardápio Online"><i
                                         class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/teste-2.png" alt="Cardapio Online">
+                        <img src="assets/imgs/teste-2.png" alt="Projeto Animes">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Animes</h5>
-                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
+                                <a href="https://organo-two-vert.vercel.app/" target="_blank" aria-label="Ver projeto Animes"><i
                                         class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -300,11 +311,11 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/landing.png" alt="Foto Projeto">
+                        <img src="assets/imgs/landing.png" alt="Projeto Landing Page">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Landing Page</h5>
-                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i
+                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank" aria-label="Ver projeto Landing Page"><i
                                         class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -338,19 +349,22 @@
             <div class="contact text-left">
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">Fale Comigo</h6>
-                    <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="POST">
+                    <form action="https://formsubmit.co/brennoalencar79@gmail.com" method="POST">
+                        <input type="hidden" name="_subject" value="Contato via Portfólio">
+                        <input type="hidden" name="_next" value="https://seudominio.com/obrigado.html">
+                        <input type="hidden" name="_captcha" value="false">
                         <div class="form-group">
                             <label class="contact-label" for="name">Nome</label>
-                            <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required>
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Digite seu nome" required>
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="email">E-mail</label>
-                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail"
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail"
                                 required>
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="message">Mensagem</label>
-                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem"
+                            <textarea id="message" name="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem"
                                 required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block rounded w-lg">Enviar mensagem</button>
@@ -375,7 +389,7 @@
                         <i class="ti-email"></i>
                         <div class="mb-0">
                             <h5 class="contact-texts">E-mail</h5>
-                            <p class="contact-texts">brennoalenkkar@icloud.com</p>
+                            <p class="contact-texts">brennoalencar79@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -417,7 +431,7 @@
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-    <script src="./assets/js/letreiro.js"></script>
+    <script src="assets/js/letreiro.js"></script>
     <script src="assets/js/scroll-direita.js"></script>
     <script src="assets/js/scroll.js"></script>
     <script src="assets/js/effect.js"></script>
