--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
     <section id="portfolio" class="section">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="subtitle">Meus <span class="about-me">Projetos</span></h2>
-                <p class="lead" style="color: var(--text-secondary);">
+                <h2 class="professional-subtitle">Meus <span class="professional-gradient-text">Projetos</span></h2>
+                <p class="lead professional-text-secondary">
                     Explore alguns dos projetos que desenvolvi, demonstrando diferentes tecnologias e soluções
                 </p>
             </div>
@@ -481,14 +481,14 @@
 
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="scroll-effect">
-                        <div class="custom-card card border text-center p-4" style="height: 250px; display: flex; align-items: center; justify-content: center;">
+                        <div class="professional-card card border text-center p-4" style="height: 250px; display: flex; align-items: center; justify-content: center;">
                             <div>
-                                <i class="fas fa-plus-circle" style="font-size: 3rem; color: var(--accent-color); margin-bottom: 1rem;"></i>
-                                <h5 style="color: var(--text-primary);">Próximos Projetos</h5>
-                                <p style="color: var(--text-secondary); font-size: 0.9rem;">
+                                <i class="fas fa-plus-circle professional-text-accent" style="font-size: 3rem; margin-bottom: 1rem;"></i>
+                                <h5 class="professional-text-primary">Próximos Projetos</h5>
+                                <p class="professional-text-secondary" style="font-size: 0.9rem;">
                                     Sempre trabalhando em novas ideias e soluções inovadoras
                                 </p>
-                                <a href="https://github.com/BrennoAlenkar" target="_blank" class="btn btn-outline-primary btn-sm">
+                                <a href="https://github.com/BrennoAlenkar" target="_blank" class="professional-btn-primary btn btn-sm">
                                     <i class="fab fa-github mr-1"></i>Ver GitHub
                                 </a>
                             </div>
@@ -498,7 +498,7 @@
             </div>
 
             <div class="text-center mt-5">
-                <a href="https://github.com/BrennoAlenkar" target="_blank" class="btn btn-primary btn-lg">
+                <a href="https://github.com/BrennoAlenkar" target="_blank" class="professional-btn-primary btn btn-lg">
                     <i class="fab fa-github mr-2"></i>Ver Todos os Projetos no GitHub
                 </a>
             </div>
@@ -511,8 +511,8 @@
     <section id="contact" class="section">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="subtitle">Vamos <span class="about-me">Conversar</span></h2>
-                <p class="lead" style="color: var(--text-secondary);">
+                <h2 class="professional-subtitle">Vamos <span class="professional-gradient-text">Conversar</span></h2>
+                <p class="lead professional-text-secondary">
                     Tenho interesse em oportunidades desafiadoras e projetos inovadores
                 </p>
             </div>
@@ -523,28 +523,28 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form">
-                                    <h4 class="mb-4" style="color: var(--text-primary);">Envie uma Mensagem</h4>
+                                    <h4 class="mb-4 professional-text-primary">Envie uma Mensagem</h4>
                                     <form action="https://formsubmit.co/brennoalencar79@gmail.com" method="POST">
                                         <input type="hidden" name="_subject" value="Contato via Portfólio - Oportunidade">
                                         <input type="hidden" name="_next" value="https://brennoalencar.dev/obrigado.html">
                                         <input type="hidden" name="_captcha" value="false">
                                         <div class="form-group mb-3">
-                                            <label class="contact-label" for="name">Nome Completo</label>
+                                            <label class="professional-label" for="name">Nome Completo</label>
                                             <input type="text" class="form-control" id="name" name="name" placeholder="Seu nome completo" required>
                                         </div>
                                         <div class="form-group mb-3">
-                                            <label class="contact-label" for="email">E-mail Profissional</label>
+                                            <label class="professional-label" for="email">E-mail Profissional</label>
                                             <input type="email" class="form-control" id="email" name="email" placeholder="seu@email.com" required>
                                         </div>
                                         <div class="form-group mb-3">
-                                            <label class="contact-label" for="company">Empresa (Opcional)</label>
+                                            <label class="professional-label" for="company">Empresa (Opcional)</label>
                                             <input type="text" class="form-control" id="company" name="company" placeholder="Nome da empresa">
                                         </div>
                                         <div class="form-group mb-4">
-                                            <label class="contact-label" for="message">Mensagem</label>
+                                            <label class="professional-label" for="message">Mensagem</label>
                                             <textarea id="message" name="message" rows="4" class="form-control" placeholder="Conte-me sobre a oportunidade ou projeto..." required></textarea>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-block">
+                                        <button type="submit" class="professional-btn-primary btn btn-block">
                                             <i class="fas fa-paper-plane mr-2"></i>Enviar Mensagem
                                         </button>
                                     </form>
@@ -552,57 +552,57 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="contact-infos">
-                                    <h4 class="mb-4" style="color: var(--text-primary);">Informações de Contato</h4>
+                                    <h4 class="mb-4 professional-text-primary">Informações de Contato</h4>
                                     
                                     <div class="item">
                                         <i class="fas fa-map-marker-alt"></i>
                                         <div>
-                                            <h5 class="contact-texts">Localização</h5>
-                                            <p class="contact-texts">Goiânia, Goiás - Brasil</p>
-                                            <small style="color: var(--text-secondary);">Disponível para trabalho remoto</small>
+                                            <h5 class="professional-text-primary">Localização</h5>
+                                            <p class="professional-text-secondary">Goiânia, Goiás - Brasil</p>
+                                            <small class="professional-text-muted">Disponível para trabalho remoto</small>
                                         </div>
                                     </div>
 
                                     <div class="item">
                                         <i class="fas fa-envelope"></i>
                                         <div>
-                                            <h5 class="contact-texts">E-mail</h5>
-                                            <p class="contact-texts">brennoalencar79@gmail.com</p>
-                                            <small style="color: var(--text-secondary);">Resposta em até 24h</small>
+                                            <h5 class="professional-text-primary">E-mail</h5>
+                                            <p class="professional-text-secondary">brennoalencar79@gmail.com</p>
+                                            <small class="professional-text-muted">Resposta em até 24h</small>
                                         </div>
                                     </div>
 
                                     <div class="item">
                                         <i class="fab fa-whatsapp"></i>
                                         <div>
-                                            <h5 class="contact-texts">WhatsApp</h5>
-                                            <p class="contact-texts">+55 (62) 99300-2421</p>
-                                            <small style="color: var(--text-secondary);">Preferível via LinkedIn</small>
+                                            <h5 class="professional-text-primary">WhatsApp</h5>
+                                            <p class="professional-text-secondary">+55 (62) 99300-2421</p>
+                                            <small class="professional-text-muted">Preferível via LinkedIn</small>
                                         </div>
                                     </div>
 
                                     <div class="item">
                                         <i class="fab fa-linkedin"></i>
                                         <div>
-                                            <h5 class="contact-texts">LinkedIn</h5>
+                                            <h5 class="professional-text-primary">LinkedIn</h5>
                                             <a href="https://www.linkedin.com/in/brenno-alencar-955460256/" target="_blank" 
-                                               style="color: var(--accent-color); text-decoration: none;">
+                                               class="professional-text-accent" style="text-decoration: none;">
                                                 /in/brenno-alencar-955460256
                                             </a>
-                                            <br><small style="color: var(--text-secondary);">Melhor forma de contato</small>
+                                            <br><small class="professional-text-muted">Melhor forma de contato</small>
                                         </div>
                                     </div>
 
                                     <div class="mt-4">
-                                        <h5 style="color: var(--text-primary); margin-bottom: 15px;">Conecte-se</h5>
+                                        <h5 class="professional-text-primary" style="margin-bottom: 15px;">Conecte-se</h5>
                                         <div class="socials">
-                                            <a class="social-item" href="https://www.linkedin.com/in/brenno-alencar-955460256/"
+                                            <a class="professional-social-item" href="https://www.linkedin.com/in/brenno-alencar-955460256/"
                                                 target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                                            <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank" title="GitHub"><i
+                                            <a class="professional-social-item" href="https://github.com/BrennoAlenkar" target="_blank" title="GitHub"><i
                                                     class="fab fa-github"></i></a>
-                                            <a class="social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20vamos%20conversar%20sobre%20oportunidades%3F"
+                                            <a class="professional-social-item" href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20vamos%20conversar%20sobre%20oportunidades%3F"
                                                 target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                                            <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank" title="Instagram"><i
+                                            <a class="professional-social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank" title="Instagram"><i
                                                     class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
@@ -621,10 +621,10 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <p style="color: var(--text-secondary); margin-bottom: 0;">
+                    <p class="professional-text-secondary" style="margin-bottom: 0;">
                         © <script>document.write(new Date().getFullYear())</script> 
                         <a href="https://github.com/BrennoAlenkar" target="_blank" 
-                           style="color: var(--accent-color); text-decoration: none; font-weight: 600;">
+                           class="professional-text-accent" style="text-decoration: none; font-weight: 600;">
                             Brenno Alencar
                         </a>
                         <br><small>Desenvolvido com 💜 e muito ☕</small>
@@ -632,18 +632,18 @@
                 </div>
                 <div class="col-md-6 text-md-right">
                     <div class="socials">
-                        <a class="social-item" href="https://www.linkedin.com/in/brenno-alencar-955460256/"
+                        <a class="professional-social-item" href="https://www.linkedin.com/in/brenno-alencar-955460256/"
                             target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a class="social-item" href="https://github.com/BrennoAlenkar" target="_blank" title="GitHub"><i
+                        <a class="professional-social-item" href="https://github.com/BrennoAlenkar" target="_blank" title="GitHub"><i
                                 class="fab fa-github"></i></a>
-                        <a class="social-item"
+                        <a class="professional-social-item"
                             href="https://wa.me/5562993002421?text=Ol%C3%A1%20Brenno%2C%20vamos%20conversar%20sobre%20oportunidades%3F"
                             target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                        <a class="social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank" title="Instagram"><i
+                        <a class="professional-social-item" href="https://www.instagram.com/brenno_alencaar/" target="_blank" title="Instagram"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
                     <div class="mt-2">
-                        <small style="color: var(--text-secondary);">
+                        <small class="professional-text-muted">
                             <i class="fas fa-map-marker-alt mr-1"></i>Goiânia, GO - Brasil
                         </small>
                     </div>
@@ -682,7 +682,7 @@
 
             // Add scroll effects
             function checkScroll() {
-                $('.scroll-effect').each(function() {
+                $('.scroll-effect, .professional-scroll-effect').each(function() {
                     var elementTop = $(this).offset().top;
                     var elementBottom = elementTop + $(this).outerHeight();
                     var viewportTop = $(window).scrollTop();
